# powersensor

./: .gitignore  README.md  TODO.txt  answer.txt  info.json  pyproject.toml  setup_venv.sh  test_sudo.py
output/: test.json
src/power_sensor/: .gitignore  check.py  cli.py  run.py  run_config.json  setup.py  setup_osquery.sh
test/: main  main.cpp
