[project]
name = "power_sensor"
version = "0.1.0"
description = "Cross-platform setup tool to collect system info and hardware power counter paths"
authors = [{ name = "Ethan", email = "weircode@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil",
    "py-cpuinfo",
    "platformdirs"
]

[project.scripts]
power_sensor = "power_sensor.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
